docs: consolidate current architecture and deployment guidance